# tdlib_python

./: .gitignore  README.md  README_AF.md  README_AR.md  README_EN.md  README_HI.md  README_JA.md  README_KO.md  README_RU.md  README_TH.md  README_zh-CN.md
.github/: FUNDING.yaml
package/tdlib_python/: pyproject.toml
package/tdlib_python/lib/tdlib_python/: __init__.py  tdlib_python.py
package/tdlib_python/lib/tdlib_python/zeroun_intezar_agler/: zeroun_intezar_agler.py
quickstart/: README.md
quickstart/example/: README.md
